Bump spring